--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,4 @@
-#panel-1{
-    background-color: aqua;
-}
-#panel-2{
-    background-color: bisque;
-}
-#panel-3{
-    background-color: rebeccapurple;
-}
-/* #panelPrincipal{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-} */
-.table1{
-    display: grid;
-    grid-template-columns: 100% 0% 0%;
-}
-.table2{
-    display: grid;
-    grid-template-columns: 10% 90% 0%;
-}
-.table3{
-    display: grid;
-    grid-template-columns: 10% 10% 80%;
+
+#project-panel mmc-card{
+    display: inline-block;
 }
