commits new feature

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #commitList{
-    display: grid;
+/*     display: grid;
     grid-template-columns: 10% 35% 35%;
     border-bottom: 1px solid gray;
     max-width: 80%;
@@ -7,7 +7,7 @@
     align-items: revert;
     font-style: inherit;
     font-size: large;
-    font-family: sans-serif;
+    font-family: sans-serif; */
 }
 #commitList > div{
    padding: 6px 3px;
