--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 #commitList{
-    display: inline-flexbox;
+    display: grid;
+    grid-template-columns: 90% 90%;
     width: 80%;
     min-width: 800px;
     max-width: 2000px;
@@ -7,8 +8,6 @@
     overflow: auto;
 }
 
-
-}
 #cardCommit{
     display: grid;
     grid-template-columns: 2fr 1fr;
